Tue Jan 10 22:34:22 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.cpp
        * tools/Config_Handlers/Basic_Deployment_Data.hpp
        * tools/Config_Handlers/cdd.cpp
        * tools/Config_Handlers/cdd.hpp
        
        Regenerated to reflect updates to schema in
        Tue Jan 10 19:01:45 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>
        
        * tools/Config_Handlers/Modified_Deployment.xsd
        
        Removed, as this file is obsolete, and schema should only exist in
        CIAO_ROOT/docs/schema
        
Tue Jan 10 22:05:17 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * examples/Hello/ReDaC-Usage.html
        
          Added a tutorial-like web page to showcase ReDaC service
          of DAnCE.

	* NEWS

	  Updated with DAnCE's recent enhancements.

Tue Jan 10 19:01:45 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * docs/schema/Basic_Deployment_Data.xsd
        * docs/schema/cdd.xsd
        
        Corrected incorrect cardinality on several target domain elements.

Tue Jan 10 11:10:01 UTC 2006  Boris Kolpackov  <boris@kolpackov.net>

        * NEWS:

          Updated with recent developments.

Mon Jan  9 14:17:39 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client.cpp:
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_dynamic.cpp:
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_ex.cpp:
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_simple.cpp:
        * examples/Hello/descriptors/Receiver_Svnt.iad:
        * examples/Hello/descriptors/Sender_Svnt.iad:
        * examples/Hello/descriptors/flattened_deploymentplan.cdp:
        * examples/Hello/descriptors/flattened_deploymentplan_without_ns.cdp:
        * examples/Hello/descriptors/flattened_deploymentplan_without_ns_add.cdp: